fix: restore const optree compatibility
Recognize safe lexical constant CVs while preserving Perl's mutation,
refaliasing, closure-ordering, and redefinition behavior across both backends.
Add a focused regression test and changelog entry.

Generated with [Codex](https://openai.com/codex/)

Co-Authored-By: Codex <codex@openai.com>